--- a/sass/layouts/cartes.scss
+++ b/sass/layouts/cartes.scss
@@ -1,8 +1,10 @@
 .menus {
   background-color: #f6f6f6;
   padding-bottom: 4rem;
+  display: grid;
+  gap: 2rem;
   h2 {
-    margin-bottom: 2rem;
+    margin-bottom: 0;
   }
 
   .menus__cartes {
@@ -69,6 +71,7 @@
       .fas.fa-heart:hover {
         opacity: 1;
         transform: translateY(-50%) scale(1.02);
+        cursor: pointer;
       }
     }
   }
