--- a/sass/layouts/header.scss
+++ b/sass/layouts/header.scss
@@ -5,6 +5,19 @@ header {
   @include shadow;
   padding: 5px;
   position: relative;
+
+  i {
+    position: absolute;
+    left: 1rem;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 20px;
+    height: 0%;
+    transition: all 0.5s;
+    &:hover {
+      transform: scale(1.2);
+    }
+  }
   h1 {
     margin-bottom: 0;
   }
