--- a/sass/layouts/reservez.scss
+++ b/sass/layouts/reservez.scss
@@ -22,4 +22,11 @@
   height: 100vh;
   inset: 0;
   z-index: 1;
+  animation: effet 3s forwards;
+  transform-origin: top;
+}
+@keyframes effet {
+  to {
+    transform: scale(0);
+  }
 }
