--- a/style/style.css
+++ b/style/style.css
@@ -105,8 +105,15 @@ header h1 {
   height: 100vh;
   inset: 0;
   z-index: 1;
+  animation: effet 3s forwards;
+  transform-origin: top;
 }
 
+@keyframes effet {
+  to {
+    transform: scale(0);
+  }
+}
 .etapes {
   counter-reset: etapes;
   padding-bottom: 3rem;
