--- a/sass/layouts/menu-page.scss
+++ b/sass/layouts/menu-page.scss
@@ -1,10 +1,9 @@
 @import "../utils/animation.scss";
-
 .banniere img {
   width: 100%;
-  max-height: 70vh;
+  max-height: 40vh;
   object-fit: cover;
-  object-position: center bottom;
+
   display: block;
 }
 
@@ -16,14 +15,15 @@
   h2 {
     font-size: 1.8rem;
     font-family: "Shrikhand", cursive;
-    padding: 1rem;
+    padding: 2rem 1rem 1rem;
     margin: 0;
   }
+  .heart,
   .heart i {
     position: absolute;
     font-size: 30px;
     right: 1rem;
-    top: 50%;
+    top: 60%;
     transform: translateY(-50%);
     cursor: pointer;
   }
@@ -90,7 +90,8 @@
       display: flex;
       padding: 1rem;
       align-items: flex-end;
-      font-weight: 900;
+      font-weight: 500;
+      font-size: 0.9rem;
     }
     .commandez-choix__description {
       padding: 1rem;
@@ -100,7 +101,11 @@
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
-        font-size: 00.9rem;
+        font-size: 0.8rem;
+      }
+      h4 {
+        font-size: 1rem;
+        font-weight: 500;
       }
     }
     .commandez-choix__check {
@@ -136,7 +141,7 @@
   }
 }
 section.order {
-  height: 30vh;
+  height: 20vh;
   display: flex;
   justify-content: center;
   align-items: center;
