--- a/sass/layouts/reservez.scss
+++ b/sass/layouts/reservez.scss
@@ -17,16 +17,58 @@
 }
 .loader {
   position: fixed;
-  background-color: #fff;
-  opacity: 0.9;
+  background-color: $color-tertiary;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 100vh;
   inset: 0;
   z-index: 1;
-  animation: effet 3s forwards;
-  transform-origin: top;
+  opacity: 0.9;
+  animation: disappear 200ms 3s forwards;
 }
-@keyframes effet {
-  to {
-    transform: scale(0);
-  }
+.letter {
+  color: $color-primary;
+  margin-bottom: 150px;
+  font-size: 2rem;
+  letter-spacing: 0.2rem;
+  animation: flash 1.2s infinite linear;
+}
+
+.letter:nth-child(1) {
+  animation-delay: 0.1s;
+}
+.letter:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.letter:nth-child(3) {
+  animation-delay: 0.3s;
+}
+.letter:nth-child(4) {
+  animation-delay: 0.4s;
+}
+.letter:nth-child(5) {
+  animation-delay: 0.5s;
+}
+.letter:nth-child(6) {
+  animation-delay: 0.6s;
+}
+.letter:nth-child(7) {
+  animation-delay: 0.7s;
+}
+.letter:nth-child(8) {
+  animation-delay: 0.8s;
+}
+.letter:nth-child(9) {
+  animation-delay: 0.9s;
+}
+.letter:nth-child(10) {
+  animation-delay: 1s;
+}
+.letter:nth-child(11) {
+  animation-delay: 1.1s;
+}
+.fondu {
+  opacity: 0;
+  transition: opacity 0.4s ease-out;
 }
