--- a/sass/utils/mixin.scss
+++ b/sass/utils/mixin.scss
@@ -6,7 +6,7 @@
   transform: scale(1.02);
 }
 @mixin gradient {
-  background-image: linear-gradient(180deg, $color-primary, $color-secondary);
+  background-image: linear-gradient(180deg, $color-secondary, $color-primary);
 }
 @mixin button {
   color: white;
