--- a/style/style.css
+++ b/style/style.css
@@ -91,7 +91,7 @@ header h1 {
   transition: transform 200ms;
   margin-top: 16px;
   margin-bottom: 25px;
-  background-image: linear-gradient(180deg, #9356dc, #ff79da);
+  background-image: linear-gradient(180deg, #ff79da, #9356dc);
 }
 .reservez button:hover {
   transform: scale(1.02);
@@ -100,20 +100,74 @@ header h1 {
 
 .loader {
   position: fixed;
-  background-color: #fff;
-  opacity: 0.9;
+  background-color: #99e2d0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 100vh;
   inset: 0;
   z-index: 1;
-  animation: effet 3s forwards;
-  transform-origin: top;
+  opacity: 0.9;
+  animation: disappear 200ms 3s forwards;
 }
 
-@keyframes effet {
-  to {
-    transform: scale(0);
-  }
+.letter {
+  color: #9356dc;
+  margin-bottom: 150px;
+  font-size: 2rem;
+  letter-spacing: 0.2rem;
+  animation: flash 1.2s infinite linear;
 }
+
+.letter:nth-child(1) {
+  animation-delay: 0.1s;
+}
+
+.letter:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.letter:nth-child(3) {
+  animation-delay: 0.3s;
+}
+
+.letter:nth-child(4) {
+  animation-delay: 0.4s;
+}
+
+.letter:nth-child(5) {
+  animation-delay: 0.5s;
+}
+
+.letter:nth-child(6) {
+  animation-delay: 0.6s;
+}
+
+.letter:nth-child(7) {
+  animation-delay: 0.7s;
+}
+
+.letter:nth-child(8) {
+  animation-delay: 0.8s;
+}
+
+.letter:nth-child(9) {
+  animation-delay: 0.9s;
+}
+
+.letter:nth-child(10) {
+  animation-delay: 1s;
+}
+
+.letter:nth-child(11) {
+  animation-delay: 1.1s;
+}
+
+.fondu {
+  opacity: 0;
+  transition: opacity 0.4s ease-out;
+}
+
 .etapes {
   counter-reset: etapes;
   padding-bottom: 3rem;
@@ -226,7 +280,7 @@ header h1 {
 }
 .menus .carte__description .fas.fa-heart {
   color: transparent;
-  background-image: linear-gradient(180deg, #9356dc, #ff79da);
+  background-image: linear-gradient(180deg, #ff79da, #9356dc);
   background-clip: text;
   -webkit-background-clip: text;
   opacity: 0;
@@ -289,11 +343,29 @@ footer .fa-hands-helping:before {
     opacity: 1;
   }
 }
+@keyframes disappear {
+  to {
+    transform: scale(0);
+  }
+}
+@keyframes flash {
+  0% {
+    color: #ff79da;
+    text-shadow: 0 0 7px #ff79da;
+  }
+  90% {
+    color: #9356dc;
+    text-shadow: none;
+  }
+  100% {
+    color: #ff79da;
+    text-shadow: 0 0 7px #ff79da;
+  }
+}
 .banniere img {
   width: 100%;
-  max-height: 70vh;
+  max-height: 40vh;
   object-fit: cover;
-  object-position: center bottom;
   display: block;
 }
 
@@ -306,20 +378,21 @@ footer .fa-hands-helping:before {
 .menu__title h2 {
   font-size: 1.8rem;
   font-family: "Shrikhand", cursive;
-  padding: 1rem;
+  padding: 2rem 1rem 1rem;
   margin: 0;
 }
+.menu__title .heart,
 .menu__title .heart i {
   position: absolute;
   font-size: 30px;
   right: 1rem;
-  top: 50%;
+  top: 60%;
   transform: translateY(-50%);
   cursor: pointer;
 }
 .menu__title .fas.fa-heart {
   color: transparent;
-  background-image: linear-gradient(180deg, #9356dc, #ff79da);
+  background-image: linear-gradient(180deg, #ff79da, #9356dc);
   background-clip: text;
   -webkit-background-clip: text;
   opacity: 0;
@@ -386,7 +459,8 @@ footer .fa-hands-helping:before {
   display: flex;
   padding: 1rem;
   align-items: flex-end;
-  font-weight: 900;
+  font-weight: 500;
+  font-size: 0.9rem;
 }
 .commandez__categorie .commandez-choix .commandez-choix__description {
   padding: 1rem;
@@ -397,7 +471,11 @@ footer .fa-hands-helping:before {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
+}
+.commandez__categorie .commandez-choix .commandez-choix__description h4 {
+  font-size: 1rem;
+  font-weight: 500;
 }
 .commandez__categorie .commandez-choix .commandez-choix__check {
   background-color: #99e2d0;
@@ -431,7 +509,7 @@ footer .fa-hands-helping:before {
 }
 
 section.order {
-  height: 30vh;
+  height: 20vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -448,7 +526,7 @@ section.order button {
   transition: transform 200ms;
   margin-top: 16px;
   margin-bottom: 25px;
-  background-image: linear-gradient(180deg, #9356dc, #ff79da);
+  background-image: linear-gradient(180deg, #ff79da, #9356dc);
   width: 50%;
 }
 section.order button:hover {
