--- a/sass/layouts/menu-page.scss
+++ b/sass/layouts/menu-page.scss
@@ -3,13 +3,15 @@
   width: 100%;
   max-height: 40vh;
   object-fit: cover;
-
+  @include desktop-only {
+    max-height: 50vh;
+  }
   display: block;
 }
 
 .menu__title {
   position: relative;
-  background-color: #f6f6f6;
+  background-color: $white-grey;
   border-radius: 1.7rem 1.7rem 0 0;
   margin-top: -2.5rem;
   h2 {
@@ -42,12 +44,12 @@
 }
 .main-categorie {
   padding: 0 0.5rem;
-  background-color: #f6f6f6;
+  background-color: $white-grey;
 }
 .commandez {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 0.7rem;
+  gap: 1rem;
   h3 {
     margin-left: 0.9rem;
     margin-bottom: 0;
@@ -69,6 +71,7 @@
 .commandez__categorie {
   border-radius: 1rem;
   overflow: hidden;
+  display: grid;
 
   .commandez-choix {
     @for $i from 1 through 3 {
@@ -80,7 +83,7 @@
     animation-fill-mode: both;
     display: flex;
     overflow: hidden;
-    background-color: white;
+    background-color: $white;
     border-radius: 1rem;
     margin: 0.5rem;
     @include shadow;
