--- a/sass/layouts/reservez.scss
+++ b/sass/layouts/reservez.scss
@@ -1,18 +1,27 @@
 @import "../utils/variables.scss";
 .reservez {
   text-align: center;
-  background-color: #f2f2f2;
+  background-color: $white-grey;
   padding: 21px;
   margin-bottom: 2rem;
   h2 {
     font-size: 23px;
+    @include desktop-only {
+      font-size: 30px;
+    }
   }
   p {
     font-size: 16px;
     font-weight: 100;
+    @include desktop-only {
+      font-size: 20px;
+    }
   }
   button {
     @include button;
+    @include desktop-only {
+      font-size: 20px;
+    }
   }
 }
 .loader {
