--- a/sass/utils/mixin.scss
+++ b/sass/utils/mixin.scss
@@ -6,7 +6,7 @@
   transform: scale(1.02);
 }
 @mixin gradient {
-  background-image: linear-gradient(180deg, $color-secondary, $color-primary);
+  background-image: linear-gradient(180deg, $color-primary, $color-secondary);
 }
 @mixin button {
   color: white;
@@ -20,9 +20,19 @@
   transition: transform 200ms;
   margin-top: 16px;
   margin-bottom: 25px;
-  @include gradient;
+  background-image: linear-gradient(180deg, $color-secondary, $color-primary);
   &:hover {
     @include zoom;
-    opacity: 0.9;
+    opacity: 0.8;
+  }
+}
+@mixin tablette-only {
+  @media screen and (min-width: map-get($breakpoints, tablette)) {
+    @content;
+  }
+}
+@mixin desktop-only {
+  @media screen and (min-width: map-get($breakpoints, desktop)) {
+    @content;
   }
 }
