--- a/sass/utils/variables.scss
+++ b/sass/utils/variables.scss
@@ -3,3 +3,10 @@ $color-secondary: #ff79da;
 $color-tertiary: #99e2d0;
 $footer-color: #353535;
 $size-etapes: 1rem;
+$white-grey: #f6f6f6;
+$white: white;
+$color-nouveau: #1c9879;
+$breakpoints: (
+  "tablette": 768px,
+  "desktop": 992px,
+);
