--- a/sass/layouts/menu-page.scss
+++ b/sass/layouts/menu-page.scss
@@ -3,7 +3,7 @@
   width: 100%;
   max-height: 40vh;
   object-fit: cover;
-  @include desktop-only {
+  @include tablette-only {
     max-height: 50vh;
   }
   display: block;
@@ -35,11 +35,11 @@
     background-clip: text;
     -webkit-background-clip: text;
     opacity: 0;
-    transition: all 200ms ease-in-out;
+    transition: all 400ms ease-in-out;
   }
   .fas.fa-heart:hover {
     opacity: 1;
-    transform: translateY(-50%);
+    transform: translateY(-50%) scale(1.05);
   }
 }
 .main-categorie {
@@ -48,11 +48,17 @@
 }
 .commandez {
   display: grid;
-  grid-template-columns: 1fr;
+  @include desktop-only {
+    grid-template-columns: repeat(3, 1fr);
+  }
   gap: 1rem;
+}
+.commandez__categorie {
+  border-radius: 1rem;
+  overflow: hidden;
   h3 {
     margin-left: 0.9rem;
-    margin-bottom: 0;
+    margin-bottom: 1.5rem;
     font-weight: 300;
     font-size: 1rem;
     position: relative;
@@ -67,12 +73,6 @@
       width: 2.5rem;
     }
   }
-}
-.commandez__categorie {
-  border-radius: 1rem;
-  overflow: hidden;
-  display: grid;
-
   .commandez-choix {
     @for $i from 1 through 3 {
       &:nth-child(#{$i}) {
@@ -148,8 +148,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  @include desktop-only {
+    height: 30vh;
+  }
   button {
     @include button;
     width: 50%;
+    @include tablette-only {
+      width: 30%;
+    }
+    @include desktop-only {
+      width: 25%;
+      font-size: 20px;
+    }
   }
 }
