--- a/sass/utils/mixin.scss
+++ b/sass/utils/mixin.scss
@@ -26,6 +26,11 @@
     opacity: 0.8;
   }
 }
+@mixin flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 @mixin tablette-only {
   @media screen and (min-width: map-get($breakpoints, tablette)) {
     @content;
