--- a/sass/layouts/city.scss
+++ b/sass/layouts/city.scss
@@ -9,9 +9,27 @@
       font-size: 20px;
     }
   }
-  h2 {
+  .css-input {
+    padding: 0px;
     font-size: 16px;
+    border-width: 0px;
+
+    background-color: inherit;
+    border-style: hidden;
+    border-radius: 0px;
     font-weight: 500;
+    width: 8rem;
+    @include flex-center;
+    @include tablette-only {
+    }
+    @include desktop-only {
+      width: 12rem;
+    }
+
+    &:focus {
+      outline: none;
+      border-color: inherit;
+    }
     @include desktop-only {
       font-size: 25px;
     }
