--- a/style/style.css
+++ b/style/style.css
@@ -86,6 +86,7 @@ header h1 {
 }
 .city .css-input::placeholder {
   color: black;
+  opacity: 1;
 }
 @media screen and (min-width: 992px) {
   .city .css-input {
@@ -497,10 +498,20 @@ footer .fa-hands-helping:before {
   margin-top: -2.5rem;
 }
 .menu__title h2 {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   font-family: "Shrikhand", cursive;
   padding: 2rem 1rem 1rem;
   margin: 0;
+}
+@media screen and (min-width: 768px) {
+  .menu__title h2 {
+    text-align: center;
+  }
+}
+@media screen and (min-width: 992px) {
+  .menu__title h2 {
+    text-align: start;
+  }
 }
 .menu__title .heart,
 .menu__title .heart i {
@@ -535,12 +546,13 @@ footer .fa-hands-helping:before {
 }
 @media screen and (min-width: 768px) {
   .commandez {
-    grid-template-columns: repeat(2, 1fr);
+    place-items: center;
   }
 }
 @media screen and (min-width: 992px) {
   .commandez {
     grid-template-columns: repeat(3, 1fr);
+    place-items: initial;
   }
 }
 
@@ -548,10 +560,20 @@ footer .fa-hands-helping:before {
   border-radius: 1rem;
   overflow: hidden;
 }
+@media screen and (min-width: 768px) {
+  .commandez__categorie {
+    width: 50%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .commandez__categorie {
+    width: 95%;
+  }
+}
 .commandez__categorie h3 {
   margin-left: 0.9rem;
   margin-bottom: 1.5rem;
-  font-weight: 300;
+  font-weight: 400;
   font-size: 1rem;
   position: relative;
 }
@@ -592,6 +614,11 @@ footer .fa-hands-helping:before {
   font-weight: 500;
   font-size: 0.9rem;
 }
+@media screen and (min-width: 768px) {
+  .commandez__categorie .commandez-choix .commandez-choix__prix {
+    font-size: 1rem;
+  }
+}
 .commandez__categorie .commandez-choix .commandez-choix__description {
   padding: 1rem;
   overflow: hidden;
@@ -603,9 +630,20 @@ footer .fa-hands-helping:before {
   text-overflow: ellipsis;
   font-size: 0.8rem;
 }
+@media screen and (min-width: 768px) {
+  .commandez__categorie .commandez-choix .commandez-choix__description h4,
+.commandez__categorie .commandez-choix .commandez-choix__description p {
+    font-size: 0.9rem;
+  }
+}
 .commandez__categorie .commandez-choix .commandez-choix__description h4 {
   font-size: 1rem;
   font-weight: 500;
+}
+@media screen and (min-width: 768px) {
+  .commandez__categorie .commandez-choix .commandez-choix__description h4 {
+    font-size: 1.1rem;
+  }
 }
 .commandez__categorie .commandez-choix .commandez-choix__check {
   background-color: #99e2d0;
@@ -613,10 +651,10 @@ footer .fa-hands-helping:before {
   width: 4rem;
   border-radius: 0 1rem 1rem 0;
   transition: margin-right 0.5s;
+  flex-shrink: 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-shrink: 0;
 }
 .commandez__categorie .commandez-choix .commandez-choix__check i {
   background: white;
@@ -624,8 +662,8 @@ footer .fa-hands-helping:before {
   width: 1.5rem;
   height: 1.5rem;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   color: #99e2d0;
 }
 .commandez__categorie .commandez-choix:hover {
@@ -675,7 +713,7 @@ footer .fa-hands-helping:before {
 }
 @media screen and (min-width: 992px) {
   .order button {
-    width: 25%;
+    width: 20%;
     font-size: 20px;
   }
 }
